# zxcvbn-hs

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project.ci  default.nix  flake.nix  hie.yaml  shell.nix  zxcvbn-hs.cabal  zxcvbn-hs.nix
.github/workflows/: analysis.yml  bump.yaml  release.yml  test.yml  tests.yml
benchmark/: Main.hs
benchmark/releases/: v0.1.0.0.txt  v0.2.0.0.txt
data/dictionaries/en-US/: README.md
data/keyboards/en-US/: numpad.txt  qwerty.txt
data/passwords/: README.md
example/: Main.hs
nix/: sources.json
src/Text/Password/: Strength.hs
src/Text/Password/Strength/: Config.hs  Dictionary.hs  Estimate.hs  Internal.hs  L33t.hs  Match.hs  SubStr.hs  Token.hs  Types.hs
src/Text/Password/Strength/Internal/: Adjacency.hs  Config.hs  Date.hs  Dictionary.hs  Estimate.hs  Keyboard.hs  L33t.hs  Match.hs  Math.hs  Repeat.hs  Search.hs  Sequence.hs  Token.hs
test/: Main.hs
test/Zxcvbn/: Adjacency.hs  Date.hs  Estimate.hs  Match.hs  Repeat.hs  Search.hs  Sequence.hs
tools/: Freq.hs  Main.hs  generate-code.sh  shell.nix
tools/Zxcvbn/: #Global.hs#  Adjacency.hs  Encode.hs  Freq.hs  Global.hs
