cabal-version:       2.2

--------------------------------------------------------------------------------
name:                zxcvbn-hs
version:             0.1.0.0
-- synopsis:
license:       MIT
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2019 Peter Jones
category:      System
-- description:

--------------------------------------------------------------------------------
extra-source-files:  CHANGELOG.md

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010
  ghc-options: -Wall
               -Werror=incomplete-record-updates
               -Werror=incomplete-uni-patterns
               -Werror=missing-home-modules
               -Widentities
               -Wmissing-export-lists
               -Wredundant-constraints

--------------------------------------------------------------------------------
common dependencies
  build-depends: base                        >= 4.9   && < 5.0


library
  import: options, dependencies
  hs-source-dirs: src

  exposed-modules:
    Text.Password.Strength

  -- other-modules:
