cabal-version:       2.2

--------------------------------------------------------------------------------
name:                zxcvbn-hs
version:             0.1.0.0
-- synopsis:
license:       MIT
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2019 Peter Jones
category:      System
-- description:

--------------------------------------------------------------------------------
extra-source-files:  CHANGELOG.md

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010
  ghc-options: -Wall
               -Werror=incomplete-record-updates
               -Werror=incomplete-uni-patterns
               -Werror=missing-home-modules
               -Widentities
               -Wmissing-export-lists
               -Wredundant-constraints

--------------------------------------------------------------------------------
common dependencies
  build-depends: base                        >= 4.9   && < 5.0
               , cereal                      >= 0.5   && < 0.6
               , cereal-text                 >= 0.1   && < 0.2
               , containers                  >= 0.6   && < 0.7
               , text                        >= 1.2   && < 1.3
               , vector                      >= 0.12  && < 0.13
               , lens                        >= 4.17  && < 4.18

library
  import: options, dependencies
  hs-source-dirs: src

  exposed-modules:
    Text.Password.Strength

  other-modules:
    Text.Password.Strength.Dictionary
    Text.Password.Strength.Internal.Frequency
    Text.Password.Strength.Match
    Text.Password.Strength.SubStr
